--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
     <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
     
     <application
-        android:label="survey"
+        android:label="المسح الميداني للباحة"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
