--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,45 +28,31 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  cached_network_image: ^3.3.1
+  connectivity_plus: ^6.0.3
+  cupertino_icons: ^1.0.8
+  dartz: ^0.10.1
+  dio: ^5.4.3+1
+  equatable: ^2.0.5
+  excel: ^4.0.6
   flutter:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
-
-  # UI & Icons
-  cupertino_icons: ^1.0.8
   flutter_svg: ^2.0.10+1
-  
-  # State Management
-  provider: ^6.1.2
-  
-  # Networking
-  dio: ^5.4.3+1
-  connectivity_plus: ^6.0.3
-  
-  # Local Storage
   hive: ^2.2.3
   hive_flutter: ^1.1.0
-  path_provider: ^2.1.3
-  
-  # Utilities
+  image_picker: ^1.2.1
   intl: ^0.20.2
-  uuid: ^4.4.0
-  equatable: ^2.0.5
-  dartz: ^0.10.1
-  
-  # UI Helpers
-  shimmer: ^3.0.0
-  cached_network_image: ^3.3.1
-  
-  # Excel Export
-  excel: ^4.0.6
+  path_provider: ^2.1.3
   permission_handler: ^11.3.1
+  provider: ^6.1.2
   share_plus: ^10.0.3
+  shimmer: ^3.0.0
+  uuid: ^4.4.0
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
+  build_runner: ^2.4.9
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -74,14 +60,14 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^5.0.0
-  
+  flutter_test:
+    sdk: flutter
+
   # Code Generation
   hive_generator: ^2.0.1
-  build_runner: ^2.4.9
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -94,13 +80,10 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/to/asset-from-package
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -117,6 +100,5 @@ flutter:
           weight: 600
         - asset: assets/fonts/Cairo-Bold.ttf
           weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
