--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   dio: ^5.4.3+1
   equatable: ^2.0.5
   excel: ^4.0.6
+  syncfusion_flutter_xlsio: ^29.2.11
   flutter:
     sdk: flutter
   flutter_localizations:
