--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   flutter_svg: ^2.0.10+1
+  geolocator: ^13.0.2
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   image_picker: ^1.2.1
