--- a/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+++ b/ios/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               Blue//printIdentifier = "97C146ED1CF9000F007C117D"
+               Blue////printIdentifier = "97C146ED1CF9000F007C117D"
                BuildableName = "Runner.app"
-               Blue//printName = "Runner"
+               Blue////printName = "Runner"
                ReferencedContainer = "container:Runner.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -31,9 +31,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            Blue//printIdentifier = "97C146ED1CF9000F007C117D"
+            Blue////printIdentifier = "97C146ED1CF9000F007C117D"
             BuildableName = "Runner.app"
-            Blue//printName = "Runner"
+            Blue////printName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -43,9 +43,9 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               Blue//printIdentifier = "331C8080294A63A400263BE5"
+               Blue////printIdentifier = "331C8080294A63A400263BE5"
                BuildableName = "RunnerTests.xctest"
-               Blue//printName = "RunnerTests"
+               Blue////printName = "RunnerTests"
                ReferencedContainer = "container:Runner.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -67,9 +67,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            Blue//printIdentifier = "97C146ED1CF9000F007C117D"
+            Blue////printIdentifier = "97C146ED1CF9000F007C117D"
             BuildableName = "Runner.app"
-            Blue//printName = "Runner"
+            Blue////printName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -84,9 +84,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            Blue//printIdentifier = "97C146ED1CF9000F007C117D"
+            Blue////printIdentifier = "97C146ED1CF9000F007C117D"
             BuildableName = "Runner.app"
-            Blue//printName = "Runner"
+            Blue////printName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
