--- a/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+++ b/macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               Blue//printIdentifier = "33CC10EC2044A3C60003C045"
+               Blue////printIdentifier = "33CC10EC2044A3C60003C045"
                BuildableName = "survey.app"
-               Blue//printName = "Runner"
+               Blue////printName = "Runner"
                ReferencedContainer = "container:Runner.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -30,9 +30,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            Blue//printIdentifier = "33CC10EC2044A3C60003C045"
+            Blue////printIdentifier = "33CC10EC2044A3C60003C045"
             BuildableName = "survey.app"
-            Blue//printName = "Runner"
+            Blue////printName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -42,9 +42,9 @@
             parallelizable = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               Blue//printIdentifier = "331C80D4294CF70F00263BE5"
+               Blue////printIdentifier = "331C80D4294CF70F00263BE5"
                BuildableName = "RunnerTests.xctest"
-               Blue//printName = "RunnerTests"
+               Blue////printName = "RunnerTests"
                ReferencedContainer = "container:Runner.xcodeproj">
             </BuildableReference>
          </TestableReference>
@@ -65,9 +65,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            Blue//printIdentifier = "33CC10EC2044A3C60003C045"
+            Blue////printIdentifier = "33CC10EC2044A3C60003C045"
             BuildableName = "survey.app"
-            Blue//printName = "Runner"
+            Blue////printName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
@@ -82,9 +82,9 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            Blue//printIdentifier = "33CC10EC2044A3C60003C045"
+            Blue////printIdentifier = "33CC10EC2044A3C60003C045"
             BuildableName = "survey.app"
-            Blue//printName = "Runner"
+            Blue////printName = "Runner"
             ReferencedContainer = "container:Runner.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
