--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   share_plus: ^10.0.3
   shimmer: ^3.0.0
   uuid: ^4.4.0
+  url_launcher: ^6.3.2
 
 dev_dependencies:
   build_runner: ^2.4.9
